# Works_BMSTU

./: Лаб.Работа_ОАиП_В2.cpp  Модульное_ДЗ2_Информатика.sql
10Homework/: 10Homework.cpp
11Homework/: 11Homework_1.cpp  11Homework_2.cpp  11Homework_3.cpp
12Homework/: 12Homework_1.cpp  12Homework_2.cpp  12Homework_3.cpp
13Homework/: 13Homework_1.cpp  13Homework_2.cpp
1Homework/: First Homework.cpp
4Homework/: Вектора.cpp
5Homework/: Строки.cpp
6Homework/: Задачи Указатели.cpp
7Homework/: 1.cpp  2 and 3.cpp  4.cpp  5.cpp  5and 6.cpp  7.cpp  8.cpp  9.cpp
8Homework/: 8Homework.cpp
9Homework/: 9Homerk_4.cpp  9Homework.cpp  9Homework_10.cpp  9Homework_11.cpp  9Homework_2.cpp  9Homework_3.cpp  9Homework_5.cpp  9Homework_6.cpp  9Homework_7.cpp  9Homework_8.cpp  9Homework_9.cpp
Homework3/: задание матрицы 4.cpp  задание матрицы 6.cpp  задание матрицы 7.cpp  задание матрицы 8.cpp  задание на матрицы 1.cpp  задание на матрицы 2.cpp  задание на матрицы 3.cpp  задача на матрицы 1.cpp  задача на матрицы 2.cpp  задача на матрицы 3.cpp
Labworks/: LabWork2OAiP.cpp  LabWorkComputerSinceВ2.cpp  Лаб.Работа_1_ОАиП_В2.cpp
ModuleHomework1/: Леончик Тимофей ДЗ ИУ1-11Б.docx
РК2_Информатика/: РК2_Информатика_SQL.sql  РК2_Информатика_С++.cpp
Экзамен Информатика/: CMakeLists.txt  README.md
Экзамен Информатика/include/: DatabaseConnection.h  Order.h  Payment.h  Product.h  User.h
Экзамен Информатика/sql/: functions.sql  procedures.sql  tables.sql  triggers.sql
Экзамен Информатика/src/: DatabaseConnection.cpp  Order.cpp  Payment.cpp  Product.cpp  User.cpp  main.cpp
(+40 files in other folders)
